--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
         <div class="row justify-content-around">
             <div class="col-md-6 shadow-lg p-3 mb-5 bg-white rounded text-center">
-                <h1>JavaScript Calculator</h1>
+                <h1>Calculator App</h1>
                 <table class="table">
                     <tr>
                         <td colspan="3"><input type="text" id="textarea"></td>
